assets/manifests/keycloak/keycloak-StatefulSet.yaml
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  namespace: ${KEYCLOAK_NAMESPACE}
  labels:
    app: keycloak
spec:
  serviceName: keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.5
          # args: ["start"]
          args: ["start", "--import-realm"]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
              scheme: HTTPS
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
              scheme: HTTPS
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 100m
              memory: 1700Mi
          volumeMounts:
            # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
            - name: tls-keycloak
              mountPath: /opt/keycloak/conf/certs
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: tls-keycloak
          secret:
            secretName: tls-keycloak
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
